[package]
name = "xplode-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.8", features=["js"], optional = true }
rand = "0.8.5"

[features]
default = []
wasm-bindgen = ["dep:getrandom"]
